--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="black">
 <style>
@@ -11,22 +9,14 @@ body{
 	align-items: center;
 	height:97vh;
 }
-.loader {
-  border: 6px solid black;
-  border-radius: 50%;
-  border-top: 6px solid white;
-  width: 40px;
-  height: 40px;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-</style>
-</head>
-<body>
-<div class="loader"></div>
-</body>
-</html>
+div{
+	border:6px solid black;
+	border-radius:50%;
+	border-top:6px solid white;
+	width:40px;
+	height:40px;
+	animation:spin 1s linear infinite;}
+@keyframes spin{
+	0%{transform:rotate(0deg)}
+	100%{transform:rotate(360deg)}}
+</style></head><body><div></div></body></html>
