--- a/Index.html
+++ b/Index.html
@@ -19,4 +19,7 @@ div{
 @keyframes spin{
 	0%{transform:rotate(0deg)}
 	100%{transform:rotate(360deg)}}
-</style></head><body><div></div></body></html>
+</style></head><body><div></div>
+<script src="Offline_Caller.js"></script>
+</body>
+</html>
