Meta Tag WA-Capable

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="black">
+<meta name="mobile-web-app-capable" content="yes">
 <style>
 body{
 	background-color: black;
