--- a/index.html
+++ b/index.html
@@ -20,4 +20,10 @@ div{
 @keyframes spin{
 	0%{transform:rotate(0deg)}
 	100%{transform:rotate(360deg)}}
-</style></head><body><div></div></body></html>
+</style>
+</head>
+<body>
+	<div></div>
+	<script src="register-sw.js"></script>
+	</body>
+	</html>
