--- a/index.html
+++ b/index.html
@@ -2,25 +2,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="black">
 <meta name="mobile-web-app-capable" content="yes">
-<style>
-body{
-	background-color: black;
-	display:flex;
-	justify-content: center;
-	align-items: center;
-	height:97vh;
-}
-div{
-	border:6px solid black;
-	border-radius:50%;
-	border-top:6px solid white;
-	width:40px;
-	height:40px;
-	animation:spin 1s linear infinite;}
-@keyframes spin{
-	0%{transform:rotate(0deg)}
-	100%{transform:rotate(360deg)}}
-</style>
+<link rel="icon" type="image/png" sizes="512x512" href="512px_icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="192px_icon.png">
+<link rel="manifest" href="manifest.json">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div></div>
