--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="black">
 <meta name="mobile-web-app-capable" content="yes">
-<link rel="icon" type="image/png" sizes="512x512" href="512px_icon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="192px_icon.png">
-<link rel="manifest" href="manifest.json">
-<link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/png" sizes="512x512" href="512px_icon.png"/>
+<link rel="icon" type="image/png" sizes="192x192" href="192px_icon.png"/>
+<link rel="manifest" href="manifest.json"/>
+<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<div></div>
